Add coordinator view for applicants to a community.
Also prompt mentors to check out the full list of applicants to all
projects under their communities.

--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -10,6 +10,18 @@ Review Project Applicants
 
 <p>Project: {{ project.short_title }}</p>
 
+<p>
+In order for mentors to accept an applicant as an intern,
+that applicant must record at least one contribution to your project
+through the Outreachy website, and submit a final application.
+</p>
+
+<p>
+The final application will include a timeline of the work to be done during the
+internship, and it's expected that applicants will work with mentors to define
+that timeline, taking into account any time commitments the applicant has.
+</p>
+
 <h2>Applicants</h2>
 
 {% if contributions %}
