--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -9,6 +9,9 @@
 {% elif request.user.comrade.eligible_application and request.user.comrade.get_projects_contributed_to %}
 {% include "home/snippet/apply_prompt.html" %}
 {% endif %}
+{% if request.user.comrade.get_approved_coordinator_communities %}
+{% include "home/snippet/coordinator_reminder_prompt.html" %}
+{% endif %}
 {% if request.user.comrade.get_approved_mentored_projects %}
 {% include "home/snippet/mentor_reminder_prompt.html" %}
 {% endif %}
