Add contribution tips link to contribution prompts
Also add tips link to contribution recording pages, so that people can
always access it.

--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -25,9 +25,12 @@ Record Contributions and Apply to {{ community.name }}
 <h1>Record Contributions and Apply to {{ community.name }}</h1>
 <p>
 All applicants must work with a mentor to make a contribution to a project.
-Details on how to make a contribution are listed below.
-<p>
 </p>
+<p>
+If you're having trouble figuring out how to contribute,
+<a href="https://www.outreachy.org/apply/make-contributions/">check out our contribution tips</a>.
+</p>
+<p>
 Once you've started a contribution, use this page to record your in-progress and completed contributions.
 Once you've recorded at least one contribution, you can start your application for the project.
 </p>
