--- a/home/templates/home/snippet/contribute_prompt.html
+++ b/home/templates/home/snippet/contribute_prompt.html
@@ -5,6 +5,8 @@
 	Only applicants who have made a contribution will be eligible to be accepted as an Outreachy intern.
 	Please look over the <a href="/apply/project-selection">projects list</a> and
 	work with a mentor to start a contribution to a project.
+	If you're having trouble figuring out how to contribute,
+	<a href="https://www.outreachy.org/apply/make-contributions/">check out our contribution tips</a>.
 	</p>
 	<p class="card-text">
 	In order to be eligible to be selected as an intern, you'll need to
