Update contributions button for closed projects

--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -75,7 +75,11 @@ Outreachy internships working with {{ community.name }}
 		</ul>
 		{% endif %}
 		{% if request.user.comrade.eligible_application %}
-			<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions</a></p>
+			{% if project in contributions %}
+				<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Update Contibutions and Apply to This Project</a></p>
+			{% else %}
+				<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
+			{% endif %}
 		{% endif %}
 		{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
 			<div id="project-closed-accordion-{{ forloop.counter }}" class="accordion">
