--- a/home/templates/home/snippet/mentor_reminder_prompt.html
+++ b/home/templates/home/snippet/mentor_reminder_prompt.html
@@ -2,15 +2,21 @@
     <div class="card-header text-white bg-info">Review Your Project's Applicants</div>
     <div class="card-body">
 	<p class="card-text">
-	Below is a list of all projects you are approved to be a mentor for,
-	where the community is also approved to participate in this round.
-	The link will lead to a page listing applicants to your project,
-	the contributions they've recorded, and their final application.
+	Below is a list of all approved projects you are approved to be a mentor for.
+	Please follow the link to view detailed information about your applicants.
+	</p>
+	<p class="card-text">
+	You can only accept an applicant as an intern if they have recorded their contributions and submitted a final application.
 	</p>
 
 	<ul>
 	{% for project in request.user.comrade.get_approved_mentored_projects %}
-		<li><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=project.project_round.community.slug project_slug=project.slug %}">{{ project.short_title }}</a> - {{ project.applicantapproval_set.all.count }} applicants</li>
+		<li><a href="{% url 'project-applicants' round_slug=current_round.slug community_slug=project.project_round.community.slug project_slug=project.slug %}">{{ project.short_title }}</a>
+			<ul>
+				<li>{{ project.get_applicants_and_contributions_list|length }} applicant{{ project.get_applicants_and_contributions_list|pluralize }} recorded their contributions</li>
+				<li>{{ project.get_applications|length }} applicant{{ project.get_applications|pluralize }} submitted a final application</li>
+			</ul>
+		</li>
 	{% endfor %}
 	</ul>
 	<p class="card-text">
