Clarify community requirements
Fixes #105

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -28,10 +28,19 @@ Call for Outreachy community coordinators, mentors, and volunteers
 <p><u>Licensing Requirements</u></p>
 {% include "home/snippet/license-requirements.html" %}
 
-<p><u>Community Requirements</u></p>
-<p>Outreachy interns benefit from working with a variety of community members who can help review their work and answer questions. This means FOSS communities in Outreachy need to be well-established communities, with core team members (either paid or volunteer) who regularly contribute to the community.</p>
+<p id="community-requirements"><u>Community Requirements</u></p>
 
-<p>Core team members, additional community contributors, and FOSS community governance members should come from a variety of different organizations, in order to ensure that one organization does not dominate the community contributions and governance of the FOSS community.</p>
+<p>Free and open source communities that participate in Outreachy must forward free and open source software in public interest.</p>
+
+<p>While we encourage companies to provide internship opportunities to people from underrepresented groups, the program cannot be used for internal company internships. Participating free software communities can't be too tightly tied to any one company. Experienced community contributors should be employed by multiple organizations or be volunteers. The community resources should not advertise services of only just one company related to the software the community produces.</p>
+
+<p>Non-profit 501(c)(3) charities and 501(c)(6) trade organizations of any size offering free software projects are welcome to participate as a mentoring community.</p>
+
+<p>All free software communities that participate in Outreachy need to be well-established, with core team members (either paid or volunteer) who regularly contribute to the community. Outreachy interns benefit from working with a variety of community members who can help review their work and answer questions.</p>
+
+<p>All work done by Outreachy interns should be public and done out in the open on public channels connected with the community.</p>
+
+<p>Outreachy intern projects will need to meet <a href="/mentor/mentor-faq/#define-a-project">additional Outreachy intern project requirements</a>.</p>
 
 <h2>Timeline for {{ current_round.internstarts|date:"F" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
 {% include "home/snippet/mentor-timeline.html" %}
