--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -148,7 +148,7 @@
 		{% elif request.user.is_authenticated %}
 			<span class="navbar-text"><a href="{% url 'account' %}">Hi, {{ request.user.username }}!</a></span>
 		{% else %}
-			<span class="navbar-text"><a href="{% url 'login' %}">Log In</a></span>
+			<span class="navbar-text"><a href="{% url 'login' %}?next={{ request.path|urlencode }}">Log In</a></span>
 		{% endif %}
                 <div id="sitenavbar" class="navbar-collapse collapse">
                     <ul class="navbar-nav ml-auto">
