Implement CoC prompt for existing users who haven't agreed to the CoC.
The agreed_to_code_of_conduct field started out as a BooleanField.
The migration made the value for all existing users be False.

I couldn't figure out how to validate it or force it to be checked.
So it was changed to a CharField (which has blank=False by default).
Now the existing users have the field set to "0".
Check that in the template.
No one should have "0" as their legal name, hopefully...

--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -1,3 +1,7 @@
+{% if request.user.comrade and request.user.comrade.agreed_to_code_of_conduct == "0" %}
+{% include "home/snippet/coc_prompt.html" %}
+{% endif %}
+
 {% if not request.user.comrade or request.user.comrade.needs_application %}
 {% include "home/snippet/eligibility_prompt.html" %}
 {% elif request.user.comrade.ineligible_application %}
