Add contribution and application prompts on mentor and coordinator views

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -4,6 +4,8 @@ Call for Outreachy community coordinators, mentors, and volunteers
 {% endblock %}
 
 {% block content %}
+{% include "home/snippet/eligibility_prompts.html" %}
+
 <a href="{% url 'community-cfp' %}">Timeline, FAQ, & Participating Communities</a>
 <h1>Call for Outreachy Community Participation</h1>
 <p>Twice a year, Free and Open Source Software (FOSS) communities work with Outreachy organizers to offer internships to <a href="/apply/eligibility/">people from groups underrepresented in tech.</a> Interns work remotely with mentors from Free and Open Source Software (FOSS) communities on projects ranging from programming, user experience, documentation, illustration and graphical design, to data science.
