--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -50,6 +50,12 @@ You're recording contributions for the following {{ community.name }} project:
 		<p>{{ final_application.foss_experience }}</p>
 		<p><i>Your relevant personal or class projects that relate to this project:</i></p>
 		<p>{{ final_application.foss_experience }}</p>
+		{% if final_application.community_specific_questions %}
+		<p><i>Answers to community-specific questions:</i></p>
+		<p>{{ final_application.community_specific_questions }}</p>
+		{% else %}
+		<p><i>You have not provided answers to community-specific questions. Please double check with your mentor and coordinator if you need to provide additional information.</i></p>
+		{% endif %}
 		<p><i>Timeline of tasks for the internship period:</i></p>
 		<p>{% if final_application.timeline %}{{ final_application.timeline }}{% else %}TBD{% endif %}</p>
 	{% endif %}
